// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Count Up (v2) block Rendered styles should match snapshot 1`] = `
Object {
  ".ugb-countup__counter": Object {
    "color": undefined,
    "fontFamily": undefined,
    "fontSize": undefined,
    "fontWeight": undefined,
    "letterSpacing": undefined,
    "lineHeight": undefined,
    "marginBottom": undefined,
    "textAlign": undefined,
    "textTransform": undefined,
  },
  ".ugb-countup__description": Object {
    "color": undefined,
    "fontFamily": undefined,
    "fontSize": undefined,
    "fontWeight": undefined,
    "letterSpacing": undefined,
    "lineHeight": undefined,
    "marginBottom": undefined,
    "textAlign": undefined,
    "textTransform": undefined,
  },
  ".ugb-countup__icon, .ugb-countup__counter, .ugb-countup__title, .ugb-countup__description": Object {
    "textAlign": undefined,
  },
  ".ugb-countup__title": Object {
    "color": undefined,
    "fontFamily": undefined,
    "fontSize": undefined,
    "fontWeight": undefined,
    "letterSpacing": undefined,
    "lineHeight": undefined,
    "marginBottom": undefined,
    "textAlign": undefined,
    "textTransform": undefined,
  },
  "editor": Object {
    "desktopTablet": Object {
      "> .ugb-inner-block > .ugb-block-content > .ugb-countup__item": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "mobile": Object {
      "> .ugb-inner-block > .ugb-block-content > .ugb-countup__item": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "tabletOnly": Object {
      "> .ugb-inner-block > .ugb-block-content > .ugb-countup__item": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
  },
  "mobile": Object {
    ".ugb-countup__counter": Object {
      "lineHeight": undefined,
      "marginBottom": undefined,
      "textAlign": undefined,
    },
    ".ugb-countup__description": Object {
      "lineHeight": undefined,
      "marginBottom": undefined,
      "textAlign": undefined,
    },
    ".ugb-countup__icon, .ugb-countup__counter, .ugb-countup__title, .ugb-countup__description": Object {
      "textAlign": undefined,
    },
    ".ugb-countup__title": Object {
      "lineHeight": undefined,
      "marginBottom": undefined,
      "textAlign": undefined,
    },
  },
  "saveOnly": Object {
    "desktopTablet": Object {
      "> .ugb-inner-block > .ugb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "mobile": Object {
      "> .ugb-inner-block > .ugb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "tabletOnly": Object {
      "> .ugb-inner-block > .ugb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
  },
  "tablet": Object {
    ".ugb-countup__counter": Object {
      "lineHeight": undefined,
      "textAlign": undefined,
    },
    ".ugb-countup__description": Object {
      "lineHeight": undefined,
      "textAlign": undefined,
    },
    ".ugb-countup__icon, .ugb-countup__counter, .ugb-countup__title, .ugb-countup__description": Object {
      "textAlign": undefined,
    },
    ".ugb-countup__title": Object {
      "lineHeight": undefined,
      "textAlign": undefined,
    },
  },
  "tabletOnly": Object {
    ".ugb-countup__counter": Object {
      "marginBottom": undefined,
    },
    ".ugb-countup__description": Object {
      "marginBottom": undefined,
    },
    ".ugb-countup__title": Object {
      "marginBottom": undefined,
    },
  },
}
`;

exports[`Count Up (v2) block Rendered styles should match snapshot with modified attributes 1`] = `
Object {
  ".ugb-countup__icon": Object {
    "marginBottom": "123px !important",
    "marginLeft": "auto !important",
    "marginRight": "auto !important",
    "opacity": "123 !important",
  },
  ".ugb-countup__icon .ugb-icon-inner-svg": Object {
    "color": "#123456 !important",
    "transform": "rotate(123deg) !important",
  },
  ".ugb-countup__icon .ugb-icon-inner-svg, .ugb-countup__icon .ugb-icon-inner-svg svg": Object {
    "height": "123px !important",
    "width": "123px !important",
  },
  ".ugb-countup__icon svg:not(.ugb-custom-icon)": Object {
    "color": "#123456",
  },
  ".ugb-countup__icon, .ugb-countup__counter, .ugb-countup__title, .ugb-countup__description": Object {
    "textAlign": undefined,
  },
  "editor": Object {
    ".ugb-countup__icon .ugb-icon-inner-svg, .ugb-countup__icon .ugb-icon-inner-svg svg path, .ugb-countup__icon .ugb-icon-inner-svg svg g, .ugb-countup__icon .ugb-icon-inner-svg svg shape, .ugb-countup__icon .ugb-icon-inner-svg svg circle, .ugb-countup__icon .ugb-icon-inner-svg svg path, .ugb-countup__icon .ugb-icon-inner-svg svg rect, .ugb-countup__icon .ugb-icon-inner-svg svg polygon, .ugb-countup__icon .ugb-icon-inner-svg svg ellipse": Object {
      "color": "#123456 !important",
      "fill": "#123456 !important",
    },
    "desktopTablet": Object {
      "> .ugb-inner-block > .ugb-block-content > .ugb-countup__item": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "mobile": Object {
      "> .ugb-inner-block > .ugb-block-content > .ugb-countup__item": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "tabletOnly": Object {
      "> .ugb-inner-block > .ugb-block-content > .ugb-countup__item": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
  },
  "mobile": Object {
    ".ugb-countup__icon": Object {
      "marginBottom": "123px !important",
      "marginLeft": "auto !important",
      "marginRight": "auto !important",
    },
    ".ugb-countup__icon .ugb-icon-inner-svg, .ugb-countup__icon .ugb-icon-inner-svg svg": Object {
      "height": "123px !important",
      "width": "123px !important",
    },
    ".ugb-countup__icon, .ugb-countup__counter, .ugb-countup__title, .ugb-countup__description": Object {
      "textAlign": undefined,
    },
  },
  "saveOnly": Object {
    ".ugb-countup__icon .ugb-icon-inner-svg, .ugb-countup__icon .ugb-icon-inner-svg svg *": Object {
      "color": "#123456 !important",
      "fill": "#123456 !important",
    },
    "desktopTablet": Object {
      "> .ugb-inner-block > .ugb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "mobile": Object {
      "> .ugb-inner-block > .ugb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
    "tabletOnly": Object {
      "> .ugb-inner-block > .ugb-block-content > *": Object {
        "paddingBottom": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingTop": undefined,
      },
    },
  },
  "tablet": Object {
    ".ugb-countup__icon": Object {
      "marginLeft": "auto !important",
      "marginRight": "auto !important",
    },
    ".ugb-countup__icon, .ugb-countup__counter, .ugb-countup__title, .ugb-countup__description": Object {
      "textAlign": undefined,
    },
  },
  "tabletOnly": Object {
    ".ugb-countup__icon": Object {
      "marginBottom": "123px !important",
    },
    ".ugb-countup__icon .ugb-icon-inner-svg, .ugb-countup__icon .ugb-icon-inner-svg svg": Object {
      "height": "123px !important",
      "width": "123px !important",
    },
  },
}
`;
